--- a/application.properties
+++ b/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/todos?useUnicode=true&useJDBCC
 spring.datasource.username=sendel
 spring.datasource.password=k8ZZs6B4oGY
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 
